fix:  close-button not visible

--- a/src/modules/iframe/components/generator/iframegenerator.css
+++ b/src/modules/iframe/components/generator/iframegenerator.css
@@ -1,14 +1,15 @@
 .iframe__preview {
 	display: flex;
-	align-items: center;
-	justify-content: center;
-	overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 .container {
 	display: flex;
-	flex-direction: column;
-	align-items: center;
-	min-height: 100vh;
+    flex-direction: column;
+    align-items: center;
+    height: calc(100vh - 15em);
 }
 .iframe__code_string {
 	margin-top: 0.5em;
